--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Кекстаграм</title>
   <script src="vendor/pristine/pristine.min.js" defer></script>
   <script src="vendor/nouislider/nouislider.js" defer></script>
-  <script src="js/main.js" type="module"~></script>
+  <script src="js/main.js" type="module"></script>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-           <form class="img-upload__form" id="upload-select-image" action="https://28.javascript.pages.academy/kekstagram" method="post" enctype="multipart/form-data" autocomplete="off">
+          <form class="img-upload__form" id="upload-select-image" action="https://28.javascript.pages.academy/kekstagram" method="post" enctype="multipart/form-data" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -121,7 +121,7 @@
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
                   <div class="img-upload__field-wrapper">
-                    <input type="text"  class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
+                    <input type="text" class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
                     <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
